[project]
name = "confluence-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.1",
    "fastmcp>=2.12.5",
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.4",
    "starlette>=0.47.0",
    "uvicorn>=0.34.3",
]
